--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "vue-resource": "^1.5.2"
+        "@vueup/vue-quill": "^1.0.0-alpha.35",
+        "quill": "^1.3.7",
+        "vue-resource": "^1.5.2",
+        "vue2-editor": "^2.10.2"
     }
 }
